# vellum-nlq

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  vellum-nlq-playbook.docx
backend/: alembic.ini  pyproject.toml
backend/app/: __init__.py  config.py  data_window.py  dbcheck.py  main.py  portfolio_audit.py  postgres_smoke.py
backend/app/analytics/: __init__.py  build.py  models.py
backend/app/api/: __init__.py  ask_schemas.py  resolve_schemas.py  routes.py  schemas.py
backend/app/ask/: __init__.py  examples.py  parser.py  period_parser.py  service.py
backend/app/audit/: __init__.py  logger.py  store.py
backend/app/db/: checks.py  proof.py  schema.py  smoke.py
backend/app/demo/: __init__.py  runner.py
backend/app/execution/: __init__.py  demo.py  demo_answers.py  demo_sql.py  factory.py  models.py  postgres.py  sqlite_seed.py
backend/app/intent/: __init__.py  deterministic.py  factory.py  fake.py  fallback.py  models.py  openai_provider.py
backend/app/mapping/: __init__.py  models.py  validator.py
backend/app/metrics/: __init__.py  additional.py
backend/app/planner/: __init__.py  additional_metrics.py  claim_frequency.py  claim_severity.py  decline_rate.py  grouping.py  incurred_claims.py  joins.py  loss_ratio.py  paid_claims.py
backend/app/portfolio/: __init__.py  audit.py  live.py
backend/app/seeds/: __init__.py  loader.py  synthetic.py
backend/app/semantic/: __init__.py  catalogue.py  models.py  question_resolver.py  resolver.py  (+2 more)
backend/migrations/: env.py
backend/seeds/: generate.py
backend/tests/: conftest.py
(+111 files in other folders)
